--- a/Pixel3DOpenGL/Pixel3DOpenGL.vcxproj.filters
+++ b/Pixel3DOpenGL/Pixel3DOpenGL.vcxproj.filters
@@ -30,9 +30,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="mesh.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="OBJloader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -70,6 +67,9 @@
       <Filter>Header Files\ECS</Filter>
     </ClInclude>
     <ClInclude Include="renderer.h">
+      <Filter>Header Files\Rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="mesh.h">
       <Filter>Header Files\Rendering</Filter>
     </ClInclude>
   </ItemGroup>
@@ -143,6 +143,9 @@
       <Filter>Resource Files\Shaders</Filter>
     </None>
     <None Include="depth.shader">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="diffuse2.shader">
       <Filter>Resource Files\Shaders</Filter>
     </None>
   </ItemGroup>
