gitignore fix + normal mapping fix + material fix
Fixed gitignore that excluded object files
Fixed and added normal mapping in world space (needs tangent rework)
Fixed multiple texture binding for materials

--- a/Pixel3DOpenGL/Pixel3DOpenGL.vcxproj
+++ b/Pixel3DOpenGL/Pixel3DOpenGL.vcxproj
@@ -198,6 +198,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\diffuse.shader" />
+    <None Include="assets\shaders\diffuseworld.shader" />
     <None Include="assets\shaders\pixel.frag" />
     <None Include="assets\shaders\pixel.vert" />
     <None Include="assets\shaders\quad.shader" />
